# HWAXLauncher

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feedback.md
.github/workflows/: build-and-sign.yml  ci.yml  contracts-validate.yml
apps/agent/: index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/agent/src/: App.tsx  main.tsx  vite-env.d.ts
apps/agent/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/agent/src-tauri/capabilities/: default.json
apps/agent/src-tauri/icons/: README.md
apps/agent/src-tauri/src/: auth.rs  commands.rs  config_store.rs  http.rs  installer.rs  lib.rs  main.rs  models.rs  paths.rs  state.rs  sync.rs  telemetry.rs  tray.rs  ws.rs
apps/agent/src-tauri/tests/: download.rs
apps/agent/src/components/: Badge.tsx  Button.tsx  ModuleCard.tsx  ProgressBar.tsx  StatusDot.tsx  Toast.tsx  Toggle.tsx  index.ts
apps/agent/src/hooks/: index.ts  useAgentStatus.ts  useConfig.ts  useInstallProgress.ts  useModules.ts  useSync.ts
apps/agent/src/ipc/: commands.ts  events.ts  types.ts
apps/agent/src/panels/: ModuleDetail.tsx  Pairing.tsx  Settings.tsx  TrayMain.tsx  index.ts
apps/agent/src/styles/: index.css
contracts/hwax-agent/: CHANGELOG.md  README.md  SYNC.md  audit-event.schema.json  install-report.schema.json  manifest.schema.json  openapi.yaml  tokens.css
crates/hwax-core/: Cargo.toml
crates/hwax-core/src/: atomic.rs  audit.rs  backoff.rs  config.rs  error.rs  hash.rs  install.rs  lib.rs  manifest.rs  origin.rs  report.rs  state.rs  store.rs  time.rs  zip_safe.rs
crates/hwax-core/tests/: fs_ops.rs  lifecycle.rs  schema_conformance.rs  units.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  EDR-WHITELIST.md  RUNBOOK.md  UPDATER-SIGNING.md
docs/adr/: 0001-tauri-2-over-winui3.md
scripts/: fetch-schemas.mjs  publish.ps1  sign.ps1
